[tool.poetry]
name = "forge-pro"
version = "0.0.0"
authors = ["Dave Gaeddert <dave.gaeddert@dropseed.dev>"]
readme = "README.md"

[tool.pytest.ini_options]
# django_debug_mode = "keep"
DJANGO_SETTINGS_MODULE = "tests.settings"
# FAIL_INVALID_TEMPLATE_VARS = true
# django_find_project = false

[tool.poetry.scripts]
forge = "forge.cli:cli"

[tool.poetry.dependencies]
python = "^3.8"
# Should these be here? Or more like peer dependencies with import errors? Or extras?
sentry-sdk = "^1.5.1"
stripe = "^2.65.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
