[tool.poetry]
name = "forge-pro"
version = "0.0.0"
authors = ["Dave Gaeddert <dave.gaeddert@dropseed.dev>"]
readme = "README.md"
description = ""
packages = [
    { include = "forgepro" },
]

[tool.poetry.dependencies]
python = "^3.8"
# Should these be here? Or more like peer dependencies with import errors? Or extras?
sentry-sdk = "^1.5.1"
stripe = "^2.65.0"

[tool.poetry.dev-dependencies]
# Forge includes pytest, black, etc.
forge1 = "^0.1.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
